# dbunitcli

./: .gitattributes  .gitignore  .roorules  CLAUDE.md  README.md  allure-maven.html  dbunitcli.code-workspace  docker-compose.yaml  pom.xml
.claude/: maven-proxy.py  settings.json  start-maven-proxy.sh
.claude/rules/: application-change-impact.md  language.md  post-implementation.md  sidecar-response-impact.md  windows-environment.md
.claude/skills/: post-impl.md
.github/workflows/: core.yml  maven.yml  native-test.yml  native-trace.yml  sidecar.yml  sync-sample.yml  tauri-build.yml  tauri.yml
.roo/rules/: 01-rules.md
core/: .clinerules  .roo-artifacts-commands.md  .roo-artifacts-settings.md  .roo-artifacts.md  .roomodes  .roorules  CLAUDE.md  access-filter.json  pom.xml
core/doc/: .roo-artifacts-settings.md
core/docs/: 01-index.md  02-commands.md  02-overview.md  03-architecture.md  (+2 more)
data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
export/: influxDbData.txt  prometheusData.txt
gui/: .clinerules  pom.xml
history/: duration-trend.json  history-trend.json  history.json  retry-trend.json
sidecar/: .clinerules  .roomodes  CLAUDE.md  access-filter.json  caller-filter.json  pom.xml
tauri/: .clinerules  .roomodes  .roorules  CLAUDE.md  biome.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  vite.config.ts
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/src/: lib.rs  main.rs
widgets/: behaviors.json  duration-trend.json  duration.json  executors.json  history-trend.json  retry-trend.json  severity.json  status-chart.json  suites.json  summary.json
(+45152 files in other folders)
